@@ -174,6 +174,12 @@
       <code>wcs_create_renewal_order( $subscription )</code>
     </UndefinedFunction>
   </file>
+  <file src="includes/subscriptions/class-wc-payments-subscriptions-onboarding-handler.php">
+    <UndefinedClass occurrences="2">
+	  <code>WC_Subscriptions_Product</code>
+	  <code>WC_Subscriptions_Product</code>
+    </UndefinedClass>
+  </file>
   <file src="includes/subscriptions/class-wc-payments-subscription-change-payment-method-handler.php">
     <UndefinedDocblockClass occurrences="3">
       <code>WC_Subscription</code>
